--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="links">
 
         <!-- Link -->
-        <a href="https://consultyd.vercel.app/"> <!--Colcoar o link aqui-->
+        <a href="https://consultyd.com.br"> <!--Colcoar o link aqui-->
           <div class="icone">
             <img src="./files/images/icone-instagram.png">
           </div>
@@ -91,7 +91,7 @@
         </a>
 
         <!-- Link -->
-        <a href="https://consultyd.vercel.app/"> <!--Colcoar o link aqui-->
+        <a href="https://consultyd.com.br"> <!--Colcoar o link aqui-->
           <div class="icone">
             <img src="./files/images/icone-facebook.png">
           </div>
@@ -102,7 +102,7 @@
         </a>
 
         <!-- Link -->
-        <a href="https://consultyd.vercel.app/"> <!--Colcoar o link aqui-->
+        <a href="https://consultyd.com.br"> <!--Colcoar o link aqui-->
           <div class="icone">
             <img src="./files/images/icone-whatsapp.png">
           </div>
@@ -113,7 +113,7 @@
         </a>
         <!-- Link -->
 
-        <a href="https://consultyd.vercel.app/"> <!--Colcoar o link aqui-->
+        <a href="https://consultyd.com.br"> <!--Colcoar o link aqui-->
           <div class="icone">          
             <img src="./files/images/icone-youtube.png">
           </div>
@@ -124,7 +124,7 @@
         </a>
 
         <!-- Link -->
-        <a href="https://consultyd.vercel.app/" class="destaque"> <!--Colcoar o link aqui-->
+        <a href="https://consultyd.com.br" class="destaque"> <!--Colcoar o link aqui-->
           <h4>EXCLUSIVO</h4>
           <div class="texto">
             <h3>Promoção exclusiva para essa Landing Pages</h3>
